maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:31: error: ')' expected but '}' found.
    }
    ^ShortestPathMaze:35: error: ')' expected but '}' found.
    }
    ^ShortestPathMaze:39: error: ')' expected but '}' found.
    }
    ^ShortestPathMaze:43: error: ')' expected but '}' found.
    }
    ^